--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "passport-local": "^1.0.0",
     "socket.io": "^4.8.0",
     "uuid": "^10.0.0",
-    "webrtc-adapter": "^8.1.0"
+    "webrtc-adapter": "^8.1.0",
+    "peer": "^0.6.1"
   },
   "devDependencies": {
     "@types/uuid": "^10.0.0",
